[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15.0"
mongodb = "2.2.0"
bson = { version = "2.0", features = ["uuid-0_8"] }
