[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.6"
dotenv = "0.15"
env_logger = "0.9"
actix-rt = "2.5" 
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.5", features = ["postgres", "runtime-actix-native-tls", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
bcrypt = "0.10"
jsonwebtoken = "8.0"
log = "0.4"
thiserror = "1.0.60"
futures = "0.3.30"
actix-web-httpauth = "0.8.1"
